jsinterop-ts-defs-processor/src/test/resources/errors/ctors/JsTypeWithMultipleNoneAnnotatedConstructors.java
package com.vertispan.tsdefs.types;

import jsinterop.annotations.*;

@JsType
public class JsTypeWithMultipleNoneAnnotatedConstructors {

    public JsTypeWithMultipleNoneAnnotatedConstructors(){
    }

    public JsTypeWithMultipleNoneAnnotatedConstructors(String lastName) {
    }
}